Deployments/strategies/blue-green/deployment-svc-v3-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v3
  labels:
    app: myapp
    version: v3
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v3
  template:
    metadata:
      name: demo-app-v3-pod
      labels:
        app: myapp
        version: v3
    spec:
      containers:
        - name: demo-app-v3-container
          image: liteshz/httpd_server_files:v3
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: demo-app-v3-svc
spec:
  type: ClusterIP
  selector: 
    app: myapp
    version: v3
  ports:
    - port: 8080
      targetPort: 80
