Deployments/strategies/blue-green/deployment-svc-v4-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v4
  labels:
    app: myapp
    version: v4
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v4
  template:
    metadata:
      name: demo-app-v4-pod
      labels:
        app: myapp
        version: v4
    spec:
      containers:
        - name: demo-app-v4-container
          image: liteshz/httpd_server_files:v4
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: demo-app-v4-svc
spec:
  type: ClusterIP
  selector: 
    app: myapp
    version: v4
  ports:
    - port: 8080
      targetPort: 80
