Deployments/strategies/blue-green/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "my-demo-svc.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-v4-svc
                port:
                  number: 8080
